--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/fortify": "^1.31",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.36",
+        "laravel/pennant": "^1.18",
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^3.2"
     },
