--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/horizon": "^5.36",
         "laravel/pennant": "^1.18",
         "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^4.0@beta",
         "predis/predis": "^3.2"
     },
     "require-dev": {
